mediaqueries for header nad first screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header class="header">
+   <header class="header">
     <div class="language">
       <div class="wrapper">
         <div class="header-switch">
@@ -34,7 +34,7 @@
           </div>
 
           <!-- Desktop Navigation -->
-          <nav class="nav">
+         <nav class="nav">
             <ul class="desktop-nav" >
               <li>
                 <a href="#" class="nav__link">
@@ -65,7 +65,7 @@
 
           <!-- Mobile Navigation -->
 
-          <div id="mobile-nav" class="mobile-nav">
+         <div id="mobile-nav" class="mobile-nav">
             <div class="mobile-nav__title">Menu</div>
             <ul class="mobile-nav-list">
               <li class="mobile-nav__item">
@@ -111,7 +111,7 @@
       </p>
     </div>
   </section>
-
+<!-- 
   <section class="ccperb">
     <div class="row">
       <div class="ccperb_info">
@@ -129,7 +129,7 @@
       </div>
     </div>
   </section>
-
+<!--
   <section class="like-to">
     <h2 class="title like-to-title">I would like to:</h2>
     <div class="like-to-menu">
@@ -495,7 +495,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
  
 <script src="./js/main.js" ></script>
 </body>
